<?xml version="1.0"?>
<package>
  <name>turtlebot_flatland</name>
  <version>0.0.0</version>
  <description>
    Flatland port of the stdr version of turtlebot simulation. Convenient to test 2D-navigation related stuffs
  </description>

  <maintainer email="joseph@avidbots.com">Joseph Duchesne</maintainer>
  <author email="mehdi.tlili@gmail.com">Joseph Duchesne</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- <run_depend>flatland_msgs</run_depend> -->
  <!-- <run_depend>flatland_plugins</run_depend> -->
  <run_depend>nav2_map_server</run_depend>
  <run_depend>nav2_rviz_plugins</run_depend>
  <run_depend>turtlebot3_bringup</run_depend>
  <run_depend>turtlebot3_navigation2</run_depend>
  <!-- <run_depend>yocs_virtual_sensor</run_depend> -->
  <!-- <run_depend>yocs_velocity_smoother</run_depend> -->

  <export><build_type>ament_cmake</build_type></export>
</package>
