<?xml version="1.0"?>
<package>
  <name>turtlebot_flatland</name>
  <version>0.0.0</version>
  <description>
    Flatland port of the stdr version of turtlebot simulation. Convenient to test 2D-navigation related stuffs.
    Some configuration and launch files from turtlebot_bringup were merged into this repo to support easy use in ROS Noetic.
  </description>

  <maintainer email="joseph@avidbots.com">Joseph Duchesne</maintainer>
  <author email="joseph@avidbots.com">Joseph Duchesne</author>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>flatland_msgs</run_depend>
  <run_depend>flatland_plugins</run_depend>
  <run_depend>navigation</run_depend>
  <run_depend>rviz</run_depend>
</package>
